Removed Mandrill as email client because it is no longer free :( Added PHP email solution.

--- a/amarbhatt.com/main/templates/Work/strykerModal.html
+++ b/amarbhatt.com/main/templates/Work/strykerModal.html
@@ -20,9 +20,9 @@
                 <h2>Stryker</h2>
                 <p><span class="icon fa-map-marker" style="font-size: 1.5em; padding-right: 5px;"></span>Kalamazoo, MI</p>
             </div><br/>
-            <p class="center"><span class="center" >Computer/Software Engineering Intern</span><br/><span class="center">May 2015 - Present</span><span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span></p>
+            <p class="center"><span class="center" >Computer/Software Engineering Intern</span><br/><span class="center">May 2015 - August 2015</span><span class="icon fa-calendar" style="font-size: 1.5em; padding-left: 5px;"></span></p>
                 <div class="content">
-                    <p>I am working on the Research and Development side of Stryker Instruments.  My team's goal is to develop the next generation of surgical tools.  So far, I have learned that research is a lot different than production engineering.  In research my tasks revolve around finding multiple solutions from the ground up and analyzing their costs and benefits. My major areas of responsibility include motor driving, position sensing, motor commutation, power regulation, and testing. </p>
+                    <p>I worked as an Electrical/Software engineering intern on the Research and Development side of Stryker Instruments where our goal was to develop the next generation of surgical tools. In research my tasks revolved around finding multiple solutions from the ground up and analyzing their costs and benefits through prototyping. My major areas of responsibility included motor driving, position sensing, motor commutation, power regulation, PCB layout, simulation design, and testing. </p>
                     <p class="line"></p>
             </div>
             <div class="center"><img src="../../images/work/stryker.png" alt="Stryker" title="Stryker"/></div>
