--- a/amarbhatt.com/main/assets/css/main.css
+++ b/amarbhatt.com/main/assets/css/main.css
@@ -2060,7 +2060,7 @@
         .image  {
             border-radius: 0.35em;
             display: block;
-            background-color: lightcyan;
+            background-color: #ddd;
             width:100%;
         }
 
@@ -3142,7 +3142,7 @@ ul.actions li input {
             #footer {
                 background-attachment: scroll;
                 background-color: #1f1815;
-                background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+                /*background-image: url("images/overlay.png"), url("../../images/bg.jpg");*/
                 background-position: top left,                      bottom center;
                 background-repeat: repeat,                          no-repeat;
                 background-size: auto,                          cover;
