Added new role and dates

--- a/amarbhatt.com/main/assets/css/main.css
+++ b/amarbhatt.com/main/assets/css/main.css
@@ -3417,3 +3417,9 @@ a:hover {
     transition: all 0.2s ease-in-out;
 }
 
+.date {
+    font-style: italic;
+    font-size: 15px;
+    color: white;
+    font-weight: bold;
+}
